<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff">
    <TextView android:id="@+id/lblName"
              android:layout_width="250dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="25dp"
              android:layout_marginTop="5dp"
              android:layout_alignParentLeft="true"
              android:textColor="#000000"
              android:gravity="left"/>
    <TextView android:id="@+id/tvLogout"
              android:layout_width="250dp"
              android:layout_height="wrap_content"
              android:layout_toRightOf="@id/lblName"
              android:text="@string/logout"
              android:layout_marginLeft="25dp"
              android:layout_marginTop="5dp"
              android:textColor="#FF0000"
              android:gravity="left"/>
    <ImageView android:id="@+id/imageView"
               android:layout_width="200dp"
               android:layout_height="200dp"
               android:layout_marginLeft="25dp"
               android:layout_below="@+id/lblName"
               android:gravity="left"
               android:src="@drawable/android"/>
    <LinearLayout
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:orientation="horizontal"
            android:layout_below="@id/lblName"
            android:layout_toRightOf="@+id/imageView"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:gravity="left">
        <TextView
                android:id="@+id/lblAddress"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:text="@string/address"/>

        <TextView android:id="@+id/tvAddress"
                  android:layout_width="100dp"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@+id/lblAddress"
                  android:textColor="#000000"
                  android:text="@string/tvAddress"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:layout_below="@id/lblAddress"
            android:layout_toRightOf="@+id/imageView"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:gravity="left">
        <TextView
                android:id="@+id/lblBirthday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:text="@string/birthday"/>

        <TextView android:id="@+id/tvBirthday"
                  android:layout_width="100dp"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@+id/lblBirthday"
                  android:textColor="#000000"
                  android:text="@string/tvBirthday"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:layout_below="@id/lblBirthday"
            android:layout_toRightOf="@+id/imageView"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:gravity="left">
        <TextView
                android:id="@+id/lblOnline"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:text="@string/online"/>

        <TextView android:id="@+id/tvOnline"
                  android:layout_width="100dp"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@+id/lblOnline"
                  android:textColor="#000000"
                  android:text="@string/tvOnline"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:layout_below="@id/lblOnline"
            android:layout_toRightOf="@+id/imageView"
            android:layout_marginTop="125dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:gravity="left">
        <TextView
                android:id="@+id/lblGender"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:text="@string/gender"/>

        <TextView android:id="@+id/tvGender"
                  android:layout_width="100dp"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@+id/lblGender"
                  android:textColor="#000000"
                  android:text="@string/tvGender"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_below="@id/lblGender"
            android:layout_toRightOf="@+id/imageView"
            android:layout_marginTop="145dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:gravity="left">
        <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">
            <RadioButton android:id="@+id/radio_male"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content"
                         android:text="@string/male"
                         android:checked="true"
                         android:textColor="#000000"
                         android:onClick="onRbGenderClicked"/>

            <RadioButton android:id="@+id/radio_female"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content"
                         android:text="@string/female"
                         android:textColor="#000000"
                         android:onClick="onRbGenderClicked"/>

        </RadioGroup>
    </LinearLayout>
    <CheckBox android:id="@+id/cboFriend"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="25dp"
              android:layout_below="@+id/imageView"
              android:text="@string/listFriends"
              android:textColor="#000000"
              android:onClick="onCheckboxClicked"/>
    <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:visibility="visible"
            android:textColor="#000000"
            android:layout_below="@+id/cboFriend">
    </ListView>
</RelativeLayout>