<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="100dp"
              android:paddingRight="100dp"
              android:background="#ffffff">
    <TextView android:text="@string/username"
              android:layout_width="100dp"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:textColor="#000000"
              android:textSize="16dp"
              android:textStyle="bold"/>
    <EditText android:id="@+id/editUserName"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dip"
            />
    <TextView android:text="@string/password"
              android:layout_width="100dp"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:textSize="16dp"
              android:textColor="#000000"
              android:textStyle="bold"/>
    <EditText android:id="@+id/editPassword"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:layout_marginTop="5dip"
            />
    <Button android:id="@+id/loginButton"
            android:text="@string/login"
            android:layout_width="100dp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_marginLeft="350dp"/>

</LinearLayout>